# libschulmanager

./: Cargo.toml  README.md
src/: errors.rs  lib.rs  sm_req.rs  test_hours.json  test_table.json  timetable.rs
src/o365/: mod.rs  request.rs  response.rs
src/sm/: hours.rs  login.rs  mod.rs  timetable.rs
src/transformers/: mod.rs  smartv1.rs  smartv2.rs
