[package]
name = "libschulmanager"
version = "0.1.0"
authors = ["sp1rit <sp1rit@disroot.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "cookies"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
snafu = "0.6.9"
html5ever = "0.25"
kuchiki = "0.8.1"
url = "2.1"

[dev-dependencies]
tokio-test = "0.2.1"
