[package]
name = "libschulmanager"
version = "0.2.0"
authors = ["sp1rit <sp1rit@disroot.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["smartv2"]
smartv1 = []
smartv2 = []
microsoft = ["html5ever", "kuchiki", "serde_urlencoded"]


[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

html5ever = { version = "0.25", optional = true }
kuchiki = { version = "0.8", optional = true }
serde_urlencoded = { version = "0.7", optional = true }

http = "0.2"
[dependencies.isahc]
version = "1.5"
default-features = false
features = ["http2", "text-decoding", "cookies", "json"]

[dev-dependencies]
futures-test = "0.3"
